<resources>
    <string name="app_name">Child Hours App Demo</string>

    <string name="arrival_button">Arrivée</string>
    <string name="departure_button">Départ</string>

    <string name="ok">Ok</string>

    <string name="addProfileTitle">Ajouter un profil</string>
    <string name="deleteProfileTitle">Supprimer un profil</string>
    <string name="prenom">Prenom</string>
    <string name="phone">Telephone</string>
    <string name="photo">Photo</string>

    <string name="valid">Valider</string>
    <string name="cancel">Annuler</string>
    <string name="modify">Modifier la saisie</string>

    <string name="notValidAdd">Veuillez entrer un nom/numéro correct.</string>
    <string name="validAdd">Le nouveau profil à bien été ajouté</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="arrival">Arrivée : </string>
    <string name="departure">Départ : </string>
    <string name="total">Total : </string>
    <string name="totalDay">Total Journée :  </string>
    <string name="noTime">00 h 00</string>

    <string name="modifyText">Quel horaire voulez-vous modifier ?</string>
    <string name="refreshText">Veuillez rafraichir les informations pour afficher les données à jour.</string>
    <string name="deleteText">Êtes vous sur de vouloir supprimer ce profil : %1$s</string>


</resources>
