<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.borombo.childhoursappdemo.activities.AddProfileActivity">

    <TextView
        android:id="@+id/addProfileTitle"
        android:text="@string/addProfileTitle"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:textSize="25sp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameLabel"
        android:text="@string/prenom"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/addProfileTitle" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:hint="@string/prenom"
        android:inputType="textPersonName"
        app:layout_constraintRight_toRightOf="@+id/nameLabel"
        app:layout_constraintLeft_toLeftOf="@+id/nameLabel"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

    <TextView
        android:id="@+id/phoneLabel"
        android:text="@string/phone"
        android:layout_width="200dp"
        android:layout_height="21dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:layout_marginTop="16dp" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintLeft_toLeftOf="@+id/phoneLabel"
        app:layout_constraintRight_toRightOf="@+id/phoneLabel"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/phoneLabel"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/valid"
        android:text="@string/valid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/cancel"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/valid"
        app:layout_constraintBottom_toBottomOf="@+id/valid"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

</android.support.constraint.ConstraintLayout>
