<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_edit_history"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.borombo.childhoursappdemo.activities.EditHistoryActivity">


    <TextView
        android:id="@+id/profileName"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Prenom"
        android:textSize="25sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.06" />

    <TextView
        android:id="@+id/dayDate"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="5 Octobre 2016"
        android:textSize="20sp"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/profileName"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/profileName"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/profileName" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:id="@+id/linearLayout"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/dayDate">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            tools:layout_editor_absoluteY="58dp"
            tools:layout_editor_absoluteX="67dp">

            <TextView
                android:text="@string/arrival"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:layout_constraintBottom_creator="1"
                app:layout_constraintBottom_toTopOf="@+id/editText4"
                tools:layout_constraintLeft_creator="1"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="time"
                tools:layout_constraintBottom_creator="1"
                app:layout_constraintBottom_toTopOf="@+id/editText"
                tools:layout_constraintLeft_creator="1"
                android:layout_marginBottom="17dp"
                app:layout_constraintLeft_toLeftOf="@+id/textView2" />

            <TextView
                android:text="h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:layout_constraintBottom_creator="1"
                app:layout_constraintBottom_toTopOf="@+id/editText"
                tools:layout_constraintLeft_creator="1"
                app:layout_constraintLeft_toLeftOf="@+id/editText" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="time"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintBottom_creator="1"
                app:layout_constraintBottom_toTopOf="@+id/editText6"
                app:layout_constraintRight_toRightOf="@+id/editText4"
                tools:layout_constraintLeft_creator="1"
                android:layout_marginBottom="17dp"
                app:layout_constraintLeft_toLeftOf="@+id/editText4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            tools:layout_editor_absoluteY="126dp"
            tools:layout_editor_absoluteX="69dp">

            <TextView
                android:text="@string/departure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:layout_constraintBottom_creator="1"
                app:layout_constraintBottom_toTopOf="@+id/editText6"
                tools:layout_constraintLeft_creator="1"
                app:layout_constraintLeft_toLeftOf="@+id/editText6" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="time"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintBottom_creator="1"
                app:layout_constraintBottom_toTopOf="@+id/editText2"
                app:layout_constraintRight_toRightOf="@+id/editText"
                tools:layout_constraintLeft_creator="1"
                android:layout_marginBottom="17dp"
                app:layout_constraintLeft_toLeftOf="@+id/editText"/>

            <TextView
                android:text="h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:layout_constraintBottom_creator="1"
                app:layout_constraintBottom_toTopOf="@+id/editText2"
                tools:layout_constraintLeft_creator="1"
                app:layout_constraintLeft_toLeftOf="@+id/editText2" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="time"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintBottom_creator="1"
                app:layout_constraintBottom_toTopOf="@+id/editText7"
                app:layout_constraintRight_toRightOf="@+id/editText6"
                tools:layout_constraintLeft_creator="1"
                android:layout_marginBottom="17dp"
                app:layout_constraintLeft_toLeftOf="@+id/editText6" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:id="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            tools:layout_editor_absoluteY="58dp"
            tools:layout_editor_absoluteX="67dp">

            <TextView
                android:text="@string/arrival"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:layout_constraintBottom_creator="1"
                app:layout_constraintBottom_toTopOf="@+id/editText4"
                tools:layout_constraintLeft_creator="1"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/textView2" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText4"
                android:inputType="time"
                tools:layout_constraintBottom_creator="1"
                app:layout_constraintBottom_toTopOf="@+id/editText"
                tools:layout_constraintLeft_creator="1"
                android:layout_marginBottom="17dp"
                app:layout_constraintLeft_toLeftOf="@+id/textView2" />

            <TextView
                android:text="h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:layout_constraintBottom_creator="1"
                app:layout_constraintBottom_toTopOf="@+id/editText"
                tools:layout_constraintLeft_creator="1"
                app:layout_constraintLeft_toLeftOf="@+id/editText" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:inputType="time"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintBottom_creator="1"
                app:layout_constraintBottom_toTopOf="@+id/editText6"
                app:layout_constraintRight_toRightOf="@+id/editText4"
                tools:layout_constraintLeft_creator="1"
                android:layout_marginBottom="17dp"
                app:layout_constraintLeft_toLeftOf="@+id/editText4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            tools:layout_editor_absoluteY="126dp"
            tools:layout_editor_absoluteX="69dp">

            <TextView
                android:text="@string/departure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:layout_constraintBottom_creator="1"
                app:layout_constraintBottom_toTopOf="@+id/editText6"
                tools:layout_constraintLeft_creator="1"
                app:layout_constraintLeft_toLeftOf="@+id/editText6" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="time"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintBottom_creator="1"
                app:layout_constraintBottom_toTopOf="@+id/editText2"
                app:layout_constraintRight_toRightOf="@+id/editText"
                tools:layout_constraintLeft_creator="1"
                android:layout_marginBottom="17dp"
                app:layout_constraintLeft_toLeftOf="@+id/editText"
                android:id="@+id/editText6" />

            <TextView
                android:text="h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:layout_constraintBottom_creator="1"
                app:layout_constraintBottom_toTopOf="@+id/editText2"
                tools:layout_constraintLeft_creator="1"
                app:layout_constraintLeft_toLeftOf="@+id/editText2" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText2"
                android:inputType="time"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintBottom_creator="1"
                app:layout_constraintBottom_toTopOf="@+id/editText7"
                app:layout_constraintRight_toRightOf="@+id/editText6"
                tools:layout_constraintLeft_creator="1"
                android:layout_marginBottom="17dp"
                app:layout_constraintLeft_toLeftOf="@+id/editText6" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/valid"
        android:text="@string/valid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/cancel"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/valid"
        app:layout_constraintBottom_toBottomOf="@+id/valid"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

</android.support.constraint.ConstraintLayout>
